--- a/Resources/Prototypes/Entities/Objects/Misc/tiles.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/tiles.yml
@@ -9,10 +9,13 @@
   - type: Item
     sprite: Objects/Tiles/tile.rsi
     size: Normal
-  - type: DamageOtherOnHit
-    damage:
-      types:
-        Blunt: 5
+# Start of SS220 Throwable Changes
+# Damage removed from throwable tiles to avoid gib cannons
+#  - type: DamageOtherOnHit
+#    damage:
+#      types:
+#        Blunt: 5
+# End of SS220 Throwable Changes
   - type: Stack
     count: 1
   - type: Damageable
@@ -36,10 +39,13 @@
             volume: -8
       - !type:DoActsBehavior
         acts: [ "Destruction" ]
-  - type: DamageOnLand
-    damage:
-      types:
-        Blunt: 5
+# Start of SS220 Throwable Changes
+# Damage removed from throwable tiles to avoid gib cannons
+#  - type: DamageOnLand
+#    damage:
+#      types:
+#        Blunt: 5
+# End of SS220 Throwable Changes
   - type: GuideHelp
     guides:
     - ExpandingRepairingStation
