--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/surgery.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/surgery.yml
@@ -64,12 +64,11 @@
     price: 40
 
 # Scalpel
-
+# SS220 BaseScalpel added to separately define the scalpel and the laser scalpel
 - type: entity
-  name: scalpel
-  id: Scalpel
+  id: BaseScalpel
   parent: BaseToolSurgery
-  description: A surgical tool used to make incisions into flesh.
+  abstract: true
   components:
   - type: Sharp
     butcherDelayModifier: 1.5 # Butchering with a scalpel, regardless of the type, will take 50% longer
@@ -106,6 +105,26 @@
     sound: /Audio/SS220/Surgery/scalpel.ogg
   # SS220 Surgery end
 
+# SS220 Scalpel item moved here 
+- type: entity
+  name: scalpel
+  id: Scalpel
+  parent: BaseScalpel
+  description: A surgical tool used to make incisions into flesh.
+  components:
+# Start of SS220 Throwable Changes
+  - type: LandAtCursor
+  - type: ThrowingAngle
+    angle: 90
+  - type: EmbeddableProjectile
+    sound: /Audio/Weapons/star_hit.ogg
+    offset: -0.15,0.0
+  - type: DamageOtherOnHit
+    damage:
+      types:
+        Slash: 6
+# End of SS220 Throwable Changes
+
 - type: entity
   name: shiv
   id: ScalpelShiv
@@ -131,17 +150,42 @@
     damage:
       types:
         Slash: 12
+# Start of SS220 Throwable Changes
+  - type: DamageOtherOnHit
+    damage:
+      types:
+        Slash: 8
+# End of SS220 Throwable Changes
 
 - type: entity
   name: laser scalpel
   id: ScalpelLaser
-  parent: Scalpel
+  parent: BaseScalpel # SS220 Changed from Scalpel to BaseScalpel
   description: A scalpel which uses a directed laser to slice instead of a blade, for more precise surgery while also cauterizing as it cuts.
   components:
   - type: Sprite
     state: laser
   - type: Item
     heldPrefix: laser
+# Start of SS220 laser scalpel changes
+  - type: MeleeWeapon
+    wideAnimationRotation: 90
+    swingLeft: true
+    attackRate: 1.5
+    damage:
+      types:
+        Slash: 4
+        Heat: 8
+    soundHit:
+      path: /Audio/Weapons/bladeslice.ogg
+# End of SS220 laser scalpel changes
+# Start of SS220 Throwable Changes
+  - type: DamageOtherOnHit
+    damage:
+      types:
+        Slash: 2
+        Heat: 6
+# End of SS220 Throwable Changes
 
 # Scissors
 
