--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/baguette.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/baguette.yml
@@ -14,3 +14,15 @@
   - type: Reflect
     reflectProb: 0.05
     spread: 90
+# Start of SS220 Throwable Changes
+  - type: LandAtCursor
+  - type: ThrowingAngle
+    angle: 225
+  - type: EmbeddableProjectile
+    sound: /Audio/Weapons/star_hit.ogg
+    offset: -0.15,0.0
+  - type: DamageOtherOnHit
+    damage:
+      types:
+        Slash: 13.5
+# End of SS220 Throwable Changes
