--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/mining.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/mining.yml
@@ -40,6 +40,12 @@
       path: /Audio/SS220/Effects/Drop/axe.ogg
       params:
         volume: 2 ##new sound_drop effect, add MIXnikita
+# Start of SS220 Throwable Changes
+  - type: DamageOtherOnHit
+    damage:
+      types:
+        Blunt: 10
+# End of SS220 Throwable Changes
 
 - type: entity
   name: mining drill
@@ -109,6 +115,12 @@
     color: "#ffeead"
     enabled: false
     radius: 4
+# Start of SS220 Throwable Changes
+  - type: DamageOtherOnHit
+    damage:
+      types:
+        Blunt: 12
+# End of SS220 Throwable Changes
 
 - type: entity
   parent: [BaseWeaponCrusher]
@@ -162,7 +174,7 @@
     sprite: Objects/Weapons/Melee/crusher-inhands.rsi
   - type: DisarmMalus
   - type: Prying
-
+  
 - type: entity
   parent: [ BaseWeaponCrusher]
   id: WeaponCrusherDagger
@@ -187,6 +199,18 @@
     types:
       - Knife
 #SS220-knife-cutter-fix-end
+# Start of SS220 Throwable Changes
+  - type: LandAtCursor
+  - type: ThrowingAngle
+    angle: 225
+  - type: EmbeddableProjectile
+    sound: /Audio/Weapons/star_hit.ogg
+    offset: -0.15,0.0
+  - type: DamageOtherOnHit
+    damage:
+      types:
+        Slash: 12.5
+# End of SS220 Throwable Changes
 
 # Like a crusher... but better
 - type: entity
@@ -210,3 +234,4 @@
   - type: Item
     size: Ginormous
     sprite: Objects/Weapons/Melee/crusher_glaive-inhands.rsi
+
