--- a/Resources/Prototypes/Entities/Objects/Tools/tools.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/tools.yml
@@ -88,7 +88,7 @@
       Steel: 100
   - type: StaticPrice
     price: 30
-# Start of SS220 Throwable Changes
+# SS220 Throwable Changes begin
   - type: LandAtCursor
   - type: ThrowingAngle
     angle: 270
@@ -99,7 +99,7 @@
     damage:
       types:
         Piercing: 5
-# End of SS220 Throwable Changes
+# SS220 Throwable Changes end
 
 - type: entity
   name: wrench
@@ -518,12 +518,12 @@
   - type: StaticPrice
     price: 25
   - type: Shovel
-# Start of SS220 Throwable Changes
+# SS220 Throwable Changes begin
   - type: DamageOtherOnHit
     damage:
       types:
         Blunt: 10
-# End of SS220 Throwable Changes
+# SS220 Throwable Changes end
 
 - type: entity
   parent: BaseItem
@@ -562,10 +562,10 @@
   - type: Construction
     graph: WoodenRollingPin
     node: rollingpin
-# Start of SS220 Throwable Changes
+# SS220 Throwable Changes begin
   - type: DamageOtherOnHit
     damage:
       types:
         Blunt: 5.5
         Stamina: 13.5
-# End of SS220 Throwable Changes
+# SS220 Throwable Changes end
