--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/sword.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/sword.yml
@@ -53,7 +53,7 @@
     weight: 0.0002 # 5,000 times less likely than 1 regular animal
   - type: PirateAccent
     # not putting a BlockMovement component here cause that's funny.
-# Start of SS220 Throwable Changes
+# SS220 Throwable Changes begin
   - type: LandAtCursor
   - type: ThrowingAngle
     angle: 225
@@ -64,7 +64,7 @@
     damage:
       types:
         Slash: 14
-# End of SS220 Throwable Changes
+# SS220 Throwable Changes end
 
 - type: entity
   name: katana
@@ -96,7 +96,7 @@
   - type: Item
     sprite: Objects/Weapons/Melee/katana.rsi
   - type: DisarmMalus
-# Start of SS220 Throwable Changes
+# SS220 Throwable Changes begin
   - type: LandAtCursor
   - type: ThrowingAngle
     angle: 225
@@ -107,7 +107,7 @@
     damage:
       types:
         Slash: 12.5
-# End of SS220 Throwable Changes
+# SS220 Throwable Changes end
 
 - type: entity
   name: energy katana
@@ -163,7 +163,7 @@
   - type: Item
     sprite: Objects/Weapons/Melee/machete.rsi
   - type: DisarmMalus
-# Start of SS220 Throwable Changes
+# SS220 Throwable Changes begin
   - type: LandAtCursor
   - type: ThrowingAngle
     angle: 225
@@ -174,7 +174,7 @@
     damage:
       types:
         Slash: 12.5
-# End of SS220 Throwable Changes
+# SS220 Throwable Changes end
 
 - type: entity
   name: claymore
@@ -202,12 +202,12 @@
     slots:
     - back
   - type: DisarmMalus
-# Start of SS220 Throwable Changes
+# SS220 Throwable Changes begin
   - type: DamageOtherOnHit
     damage:
       types:
         Blunt: 6
-# End of SS220 Throwable Changes
+# SS220 Throwable Changes end
 
 - type: entity
   name: cutlass
@@ -234,7 +234,7 @@
   - type: Item
     sprite: Objects/Weapons/Melee/cutlass.rsi
   - type: DisarmMalus
-# Start of SS220 Throwable Changes
+# SS220 Throwable Changes begin
   - type: LandAtCursor
   - type: ThrowingAngle
     angle: 225
@@ -245,7 +245,7 @@
     damage:
       types:
         Slash: 13.5
-# End of SS220 Throwable Changes
+# SS220 Throwable Changes end
 
 - type: entity
   name: throngler
@@ -277,9 +277,9 @@
     - type: Grammar
       attributes:
         proper: true
-# Start of SS220 Throwable Changes
+# SS220 Throwable Changes begin
     - type: DamageOtherOnHit
       damage:
         types:
           Blunt: 12
-# End of SS220 Throwable Changes
+# SS220 Throwable Changes end
