--- a/Resources/Prototypes/Entities/Objects/Misc/tiles.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/tiles.yml
@@ -9,13 +9,13 @@
   - type: Item
     sprite: Objects/Tiles/tile.rsi
     size: Normal
-# Start of SS220 Throwable Changes
+# SS220 Throwable Changes begin
 # Damage removed from throwable tiles to avoid gib cannons
 #  - type: DamageOtherOnHit
 #    damage:
 #      types:
 #        Blunt: 5
-# End of SS220 Throwable Changes
+# SS220 Throwable Changes end
   - type: Stack
     count: 1
   - type: Damageable
@@ -39,13 +39,13 @@
             volume: -8
       - !type:DoActsBehavior
         acts: [ "Destruction" ]
-# Start of SS220 Throwable Changes
+# SS220 Throwable Changes begin
 # Damage removed from throwable tiles to avoid gib cannons
 #  - type: DamageOnLand
 #    damage:
 #      types:
 #        Blunt: 5
-# End of SS220 Throwable Changes
+# SS220 Throwable Changes end
   - type: GuideHelp
     guides:
     - ExpandingRepairingStation
