--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/fireaxe.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/fireaxe.yml
@@ -55,12 +55,12 @@
     stealGroup: FireAxe
   - type: IgniteOnMeleeHit
     fireStacks: -4
-# Start of SS220 Throwable Changes
+# SS220 Throwable Changes begin
   - type: DamageOtherOnHit
     damage:
       types:
         Blunt: 12
-# End of SS220 Throwable Changes
+# SS220 Throwable Changes end
 
 
 - type: entity
