--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/knife.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/knife.yml
@@ -32,11 +32,11 @@
       - Slicing
     useSound:
       path: /Audio/Items/Culinary/chop.ogg
-# Start of SS220 Throwable Changes
+# SS220 Throwable Changes begin
   - type: LandAtCursor
   - type: ThrowingAngle
     angle: 225
-# End of SS220 Throwable Changes
+# SS220 Throwable Changes end
 
 - type: entity
   name: kitchen knife
@@ -57,7 +57,7 @@
     guides:
     - Chef
     - FoodRecipes
-# Start of SS220 Throwable Changes
+# SS220 Throwable Changes begin
   - type: EmbeddableProjectile
     sound: /Audio/Weapons/star_hit.ogg
     offset: -0.15,0.0
@@ -65,7 +65,7 @@
     damage:
       types:
         Slash: 8
-# End of SS220 Throwable Changes
+# SS220 Throwable Changes end
 
 - type: entity
   name: butcher's cleaver
@@ -93,7 +93,7 @@
     guides:
     - Chef
     - FoodRecipes
-# Start of SS220 Throwable Changes
+# SS220 Throwable Changes begin
   - type: EmbeddableProjectile
     sound: /Audio/Weapons/star_hit.ogg
     offset: -0.15,0.0
@@ -101,7 +101,7 @@
     damage:
       types:
         Slash: 11
-# End of SS220 Throwable Changes
+# SS220 Throwable Changes end
 
 - type: entity
   name: combat knife
@@ -243,14 +243,14 @@
     sprite: Objects/Weapons/Melee/shiv.rsi
   - type: DisarmMalus
     malus: 0.225
-# Start of SS220 Throwable Changes
+# SS220 Throwable Changes begin
   - type: ThrowingAngle
     angularVelocity: true # spins
   - type: DamageOtherOnHit
     damage:
       types:
         Slash: 4.5
-# End of SS220 Throwable Changes
+# SS220 Throwable Changes end
 
 - type: entity
   name: reinforced shiv
@@ -270,12 +270,12 @@
     sprite: Objects/Weapons/Melee/reinforced_shiv.rsi
   - type: Sprite
     sprite: Objects/Weapons/Melee/reinforced_shiv.rsi
-# Start of SS220 Throwable Changes
+# SS220 Throwable Changes begin
   - type: DamageOtherOnHit
     damage:
       types:
         Slash: 6
-# End of SS220 Throwable Changes
+# SS220 Throwable Changes end
 
 - type: entity
   name: plasma shiv
@@ -295,12 +295,12 @@
     sprite: Objects/Weapons/Melee/plasma_shiv.rsi
   - type: Sprite
     sprite: Objects/Weapons/Melee/plasma_shiv.rsi
-# Start of SS220 Throwable Changes
+# SS220 Throwable Changes begin
   - type: DamageOtherOnHit
     damage:
       types:
         Slash: 7.5
-# End of SS220 Throwable Changes
+# SS220 Throwable Changes end
 
 - type: entity
   name: uranium shiv
@@ -321,13 +321,13 @@
     sprite: Objects/Weapons/Melee/uranium_shiv.rsi
   - type: Sprite
     sprite: Objects/Weapons/Melee/uranium_shiv.rsi
-# Start of SS220 Throwable Changes
+# SS220 Throwable Changes begin
   - type: DamageOtherOnHit
     damage:
       types:
         Slash: 6
         Radiation: 3
-# End of SS220 Throwable Changes
+# SS220 Throwable Changes end
 
 - type: entity
   name: throwing knife
