--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/mining.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/mining.yml
@@ -40,12 +40,12 @@
       path: /Audio/SS220/Effects/Drop/axe.ogg
       params:
         volume: 2 ##new sound_drop effect, add MIXnikita
-# Start of SS220 Throwable Changes
+# SS220 Throwable Changes begin
   - type: DamageOtherOnHit
     damage:
       types:
         Blunt: 10
-# End of SS220 Throwable Changes
+# SS220 Throwable Changes end
 
 - type: entity
   name: mining drill
@@ -115,12 +115,12 @@
     color: "#ffeead"
     enabled: false
     radius: 4
-# Start of SS220 Throwable Changes
+# SS220 Throwable Changes begin
   - type: DamageOtherOnHit
     damage:
       types:
         Blunt: 12
-# End of SS220 Throwable Changes
+# SS220 Throwable Changes end
 
 - type: entity
   parent: [BaseWeaponCrusher]
@@ -199,7 +199,7 @@
     types:
       - Knife
 #SS220-knife-cutter-fix-end
-# Start of SS220 Throwable Changes
+# SS220 Throwable Changes begin
   - type: LandAtCursor
   - type: ThrowingAngle
     angle: 225
@@ -210,7 +210,7 @@
     damage:
       types:
         Slash: 12.5
-# End of SS220 Throwable Changes
+# SS220 Throwable Changes end
 
 # Like a crusher... but better
 - type: entity
