--- a/Resources/Prototypes/SS220/Entities/Objects/Weapons/Melee/borgFireaxe.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Weapons/Melee/borgFireaxe.yml
@@ -37,12 +37,12 @@
     delay: 1
   - type: IgniteOnMeleeHit
     fireStacks: -4
-# Start of SS220 Throwable Changes
+# SS220 Throwable Changes begin
   - type: DamageOtherOnHit
     damage:
       types:
         Blunt: 12
-# End of SS220 Throwable Changes
+# SS220 Throwable Changes end
 
 - type: entity
   id: BorgFireAxeFlaming
@@ -72,10 +72,8 @@
         - Scientist
         - Borg
 # Corvax-HiddenDesc-End
-# Start of SS220 Throwable Changes
   - type: DamageOtherOnHit
     damage:
       types:
         Blunt: 12
-# End of SS220 Throwable Changes
 
