--- a/Resources/Prototypes/Catalog/Cargo/cargo_engines.yml
+++ b/Resources/Prototypes/Catalog/Cargo/cargo_engines.yml
@@ -29,9 +29,9 @@
   group: market
 
 - type: cargoProduct
-  name: "emitter crate"
+  #name: "emitter crate" // SS220 Translation
   id: EngineSingularityEmitter
-  description: "Contains an emitter. Used only for dangerous applications."
+  #description: "Contains an emitter. Used only for dangerous applications." // SS220 Translation
   icon:
     sprite: Structures/Power/Generation/Singularity/emitter.rsi
     state: emitter # COrvax-Resprite
