Add Medical Chief Box Bottle and Cerebrin Bottle, Add box into chief locker

--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -240,6 +240,7 @@
     - id: ClothingWristWatchGold # SS220 Wrist Watch
     - id: CigPackMED #SS220 Cigarettes
     - id: MedTekCartridge
+    - id: BoxBottleChief #SS220 Limitation Revive
 
 # Hardsuit table, used for suit storage as well
 - type: entityTable
