--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/strangeFruit.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/strangeFruit.yml
@@ -38,7 +38,7 @@
     - type: Sprite
       sprite: SS220/Objects/CultYogg/strangefruit.rsi
       state: kudzu_11
-      drawdepth: Overdoors
+      drawdepth: HighFloorObjects
     - type: Clickable
     - type: Kudzu
       growthTickChance: 0.2
