Праотцы изобрели колесо Тока для того чтобы вставляли в него Мы сами себе эти ветки и палки

--- a/Resources/Prototypes/SS220/lobbyscreens.yml
+++ b/Resources/Prototypes/SS220/lobbyscreens.yml
@@ -37,7 +37,7 @@
 - type: lobbyBackground
   id: SyndiLand
   background: /Textures/SS220/LobbyScreens/SyndiLand.png
-  
+
 - type: lobbyBackground
   id: CardShowdown
   background: /Textures/SS220/LobbyScreens/Card-showdown.png
@@ -49,3 +49,7 @@
 - type: lobbyBackground
   id: GloryToNanoTrasen
   background: /Textures/SS220/LobbyScreens/GloryToNanoTrasen.png
+
+- type: lobbyBackground
+  id: YouNoYou
+  background: /Textures/SS220/LobbyScreens/YouNoYou.png
