--- a/Resources/Textures/SS220/LobbyScreens/attributions.yml
+++ b/Resources/Textures/SS220/LobbyScreens/attributions.yml
@@ -48,7 +48,7 @@
   license: "CC-BY-3.0"
   copyright: "Created by Doner2119 for SS220"
   source: "https://github.com/SerbiaStrong-220"
-  
+
 - files: ["Card-showdown.png"]
   license: "CC-BY-3.0"
   copyright: "Created by Gabka for SS220"
@@ -62,4 +62,9 @@
 - files: ["GloryToNanoTrasen.png"]
   license: "CC-BY-3.0"
   copyright: "Created by MadSkaven for SS220"
+  source: "https://github.com/SerbiaStrong-220"
+
+- files: ["YouNoYou.png"]
+  license: "CC-BY-3.0"
+  copyright: "Created by MefedronEnjoyer for SS220"
   source: "https://github.com/SerbiaStrong-220"
