--- a/Resources/Prototypes/SS220/Mobs/PetParrots.yml
+++ b/Resources/Prototypes/SS220/Mobs/PetParrots.yml
@@ -27,6 +27,7 @@
     - id: Galactic
     - id: SolCommon
       canSpeak: false
+  - type: InteractionPopup
     successChance: 1
   - type: Grammar
     attributes:
