--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/defib.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/defib.yml
@@ -33,6 +33,7 @@
       zapHeal:
         types:
           Asphyxiation: -40
+      zapСoeffDamage: 8
     - type: DoAfter
     - type: UseDelay
     - type: StaticPrice
