--- a/Resources/Prototypes/Roles/Jobs/Command/blue_shield.yml
+++ b/Resources/Prototypes/Roles/Jobs/Command/blue_shield.yml
@@ -55,6 +55,11 @@
 #        - NonLethalDisarm
 #        - NonLethalLongSleep
 #      - type: Missable
+  #SS220 LimitationRevive - start
+  - !type:AddComponentSpecial
+    components:
+    - type: DefibrillatorSkill 
+  #SS220 LimitationRevive - end
 
 - type: startingGear
   id: BlueShieldGear
