--- a/Resources/Prototypes/Entities/Mobs/Species/vox.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/vox.yml
@@ -185,6 +185,13 @@
   - type: Emoting
     chatEmoteCooldown: 5.0
   #ss220 emote 5 sec end
+  #SS220 LimitationRevive - start
+  - type: LimitationRevive
+    maxRevive: 100 #has no death limit
+    typeDamageOnDead:
+      types:
+        Сerebral: 400
+  #SS220 LimitationRevive - end
 
 - type: entity
   parent: BaseSpeciesDummy
