--- a/Resources/Prototypes/Roles/Jobs/Medical/chemist.yml
+++ b/Resources/Prototypes/Roles/Jobs/Medical/chemist.yml
@@ -14,6 +14,12 @@
   - Medical
   - Chemistry
   - Maintenance
+  #SS220 LimitationRevive - start
+  special:
+  - !type:AddComponentSpecial
+    components:
+    - type: DefibrillatorSkill 
+  #SS220 LimitationRevive - end
 
 - type: startingGear
   id: ChemistGear
