--- a/Resources/Prototypes/Entities/Structures/Machines/holopad.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/holopad.yml
@@ -176,6 +176,10 @@
   - type: Tag
     tags:
     - HideContextMenu
+  # SS220 languages begin
+  - type: Language
+    knowAllLLanguages: true # Used an transponder
+  # SS220 languages end
 
 ## Mapping prototypes
 # General
