enable languages in intercom

--- a/Resources/Prototypes/Entities/Structures/Wallmounts/intercom.yml
+++ b/Resources/Prototypes/Entities/Structures/Wallmounts/intercom.yml
@@ -4,6 +4,10 @@
   description: An intercom. For when the station just needs to know something.
   abstract: true
   components:
+  # SS220 languages begin
+  - type: Language
+    knowAllLLanguages: true # Used an transponder
+  # SS220 languages end
   - type: StationAiWhitelist
   - type: WallMount
   - type: ApcPowerReceiver
