--- a/Resources/Prototypes/Entities/Objects/Devices/tape_recorder.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/tape_recorder.yml
@@ -53,7 +53,7 @@
   - type: TTS # SS220 Tape recorder TTS
   # SS220 languages begin
   - type: Language
-    knowAllLLanguages: true
+    knowAllLLanguages: true # Used an transponder
   # SS220 languages end
 
 - type: entity
