--- a/Resources/Prototypes/Entities/Structures/Machines/Computers/computers.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/Computers/computers.yml
@@ -1174,7 +1174,7 @@
   - type: ViewableStationMap # SS220 Camera-Map
   # SS220 languages begin
   - type: Language
-    knowAllLLanguages: true
+    knowAllLLanguages: true # Used an transponder
   # SS220 languages end
 
 - type: entity
