--- a/Resources/Prototypes/Entities/Structures/Wallmounts/monitors_televisions.yml
+++ b/Resources/Prototypes/Entities/Structures/Wallmounts/monitors_televisions.yml
@@ -184,5 +184,5 @@
     color: "#b89f25"
   # SS220 languages begin
   - type: Language
-    knowAllLLanguages: true
+    knowAllLLanguages: true # Used an transponder
   # SS220 languages end
