--- a/Resources/Prototypes/Entities/Clothing/Back/specific.yml
+++ b/Resources/Prototypes/Entities/Clothing/Back/specific.yml
@@ -71,8 +71,8 @@
           tags:
             - SprayNozzle
   - type: Appearance
-  - type: SolutionAmmoProvider
-    solutionId: tank
+  #- type: SolutionAmmoProvider
+  #  solutionId: tank
     proto: BulletWaterShot
   - type: SolutionContainerManager
     solutions:
@@ -87,6 +87,10 @@
     interfaces:
       enum.TransferAmountUiKey.Key:
         type: TransferAmountBoundUserInterface
+      # SS220 Nuzzle refactor begin
+      enum.StorageUiKey.Key:
+        type: StorageBoundUserInterface
+      # SS220 Nuzzle refactor end
   - type: DrawableSolution
     solution: tank
   - type: RefillableSolution
@@ -95,3 +99,14 @@
     solution: tank
   - type: ExaminableSolution
     solution: tank
+  # SS220 Nuzzle refactor begin
+  - type: SolutionProvider
+    solutionId: tank
+  - type: Storage
+    grid:
+    - 0,0,1,1
+    whitelist:
+      components:
+      - ClothingSlotSolutionProvider
+  # SS220 Nuzzle refactor begin
+
