Goliath Hardsuit Repsrite

--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/hardsuits.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/hardsuits.yml
@@ -197,9 +197,9 @@
   description: A lightweight hardsuit, adorned with a patchwork of thick, chitinous goliath hide.
   components:
   - type: Sprite
-    sprite: Clothing/OuterClothing/Hardsuits/goliath.rsi
+    sprite: SS220/Clothing/OuterClothing/Hardsuits/goliath.rsi #SS220 Goliath Hardsuit Repsrite
   - type: Clothing
-    sprite: Clothing/OuterClothing/Hardsuits/goliath.rsi
+    sprite: SS220/Clothing/OuterClothing/Hardsuits/goliath.rsi #SS220 Goliath Hardsuit Repsrite
   - type: PressureProtection
     highPressureMultiplier: 0.5
     lowPressureMultiplier: 1000
