--- a/Resources/Prototypes/Entities/Clothing/Head/hardsuit-helmets.yml
+++ b/Resources/Prototypes/Entities/Clothing/Head/hardsuit-helmets.yml
@@ -142,29 +142,35 @@
   description: A sturdy hardsuit helmet, infused with a goliath's hide and an eerie, unblinking eye cut from its mass.
   components:
   - type: Sprite
-    sprite: Clothing/Head/Hardsuits/goliathhelm.rsi
-    layers:
-    - state: icon
-    - state: icon-unshaded
-      shader: unshaded
-    - state: light-overlay
-      visible: false
-      shader: unshaded
-      map: [ "light" ]
-  - type: HandheldLight
-    addPrefix: false
-  - type: ToggleableLightVisuals
-    clothingVisuals:
-      head:
-      - state: equipped-head-light
-        shader: unshaded
+    sprite: SS220/Clothing/Head/Hardsuits/goliathhelm.rsi #SS220 Goliath Hardsuit Repsrite
+  #SS220 Goliath Hardsuit Repsrite Begin
+  #   layers:
+  #   - state: icon
+  #   - state: icon-unshaded
+  #     shader: unshaded
+  #   - state: light-overlay
+  #     visible: false
+  #     shader: unshaded
+  #     map: [ "light" ]
+  # - type: HandheldLight
+  #   addPrefix: false
+  # - type: ToggleableLightVisuals
+  #   clothingVisuals:
+  #     head:
+  #     - state: equipped-head-light
+  #       shader: unshaded
+  #SS220 Goliath Hardsuit Repsrite End
   - type: Clothing
-    clothingVisuals:
-      head:
-      - state: equipped-head
-      - state: equipped-head-unshaded
-        shader: unshaded
+    sprite: SS220/Clothing/Head/Hardsuits/goliathhelm.rsi #SS220 Goliath Hardsuit Repsrite
+  #SS220 Goliath Hardsuit Repsrite Begin
+    # clothingVisuals:
+    #   head:
+    #   - state: equipped-head
+    #   - state: equipped-head-unshaded
+    #     shader: unshaded
+  #SS220 Goliath Hardsuit Repsrite End
   - type: PointLight
+    color: "#d82016" #SS220 Goliath Hardsuit Repsrite
     radius: 6
   - type: PressureProtection
     highPressureMultiplier: 0.72
