--- a/Resources/Prototypes/SS220/Entities/Objects/Consumable/CultYogg/LubroShroom.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Consumable/CultYogg/LubroShroom.yml
@@ -11,6 +11,7 @@
     sprite: SS220/Objects/CultYogg/lurbo_shroom.rsi
     equipSound: /Audio/SS220/CultYogg/lurbo_kill.ogg
     unequipSound: /Audio/SS220/CultYogg/lurbo_unequip.ogg
+    soundOnPocketSlot: false
     equipDelay: 1
     unequipDelay: 1
   - type: NoSlip
